@startuml ERD
!theme plain
hide circle
skinparam linetype ortho

entity "USERS" as users {
  * id : bigint <<PK>>
  --
  * name : string
  * email : string
  * password : string
  * role : string (admin | pet_owner | service_provider)
  phone : string
  bio : string
  * is_verified : boolean
  * is_active : boolean
}

entity "PETS" as pets {
  * id : bigint <<PK>>
  --
  * user_id : bigint <<FK>>
  * name : string
  * type : string
  breed : string
  age : int
  weight : decimal
}

entity "ADDRESSES" as addresses {
  * id : bigint <<PK>>
  --
  * user_id : bigint <<FK>>
  * label : string
  * address_line : text
}

entity "SERVICES" as services {
  * id : bigint <<PK>>
  --
  * provider_id : bigint <<FK>>
  * name : string
  * price : decimal
}

entity "PRODUCTS" as products {
  * id : bigint <<PK>>
  --
  * seller_id : bigint <<FK>>
  * name : string
  * price : decimal
  * stock : int
}

entity "BOOKINGS" as bookings {
  * id : bigint <<PK>>
  --
  * pet_owner_id : bigint <<FK>>
  * provider_id : bigint <<FK>>
  * pet_id : bigint <<FK>>
  * service_id : bigint <<FK>>
  * status : string 
  * total_price : decimal
}

entity "MEDICAL_RECORDS" as medical_records {
  * id : bigint <<PK>>
  --
  * pet_id : bigint <<FK>>
  * vet_id : bigint <<FK>>
  booking_id : bigint <<FK>>
  * diagnosis : text
  treatment : text
}

entity "REVIEWS" as reviews {
  * id : bigint <<PK>>
  --
  * booking_id : bigint <<FK>>
  * pet_owner_id : bigint <<FK>>
  * provider_id : bigint <<FK>>
  * rating : int
  comment : text
}

entity "ORDERS" as orders {
  * id : bigint <<PK>>
  --
  * pet_owner_id : bigint <<FK>>
  * total_amount : decimal
  * status : string
  shipping_address : text
  payment_proof : string
}

entity "ORDER_ITEMS" as order_items {
  * id : bigint <<PK>>
  --
  * order_id : bigint <<FK>>
  * product_id : bigint <<FK>>
  * quantity : int
  * price : decimal
}

users ||--o{ pets : "owns"
users ||--o{ addresses : "has"
users ||--o{ services : "manages"
users ||--o{ products : "sells"
users ||--o{ bookings : "books"
users ||--o{ orders : "purchases"
users ||--o{ reviews : "writes"

pets ||--o{ bookings : "attends"
pets ||--o{ medical_records : "has history"

services ||--o{ bookings : "associated with"
bookings ||--o| medical_records : "results in"
bookings ||--o| reviews : "evaluated by"

orders ||--|{ order_items : "contains"
products ||--o{ order_items : "ordered"
@enduml
